<resources>
    <string name="app_name">SuperFit</string>
    <string name="action_settings">Einstellungen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="maps">Kartenauswahl</string>
    <string name="tracks">Tracks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Erfassung aller Fitnessdaten</string>
    <string name="main_menu">Ansicht</string>
    <string name="nav_menu_controls">Bedienelemente</string>
    <string name="nav_menu_tracks">Tracks</string>
    <string name="display">Display</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="track_symbol">Track symbol</string>
    <string name="toggle_controls">toggle controls</string>
    <string name="delete_track">Delete track</string>
    <string name="save_track">Save track</string>
    <string name="cadence">Trittfrequenz</string>
    <string name="_1_minUnit">1/min</string>
    <string name="velocity">Geschwindigkeit</string>
    <string name="velocityUnit">km/h</string>
    <string name="heartBeat">Herzfrequenz</string>
    <string name="distance">Strecke</string>
    <string name="km">km</string>
    <string name="duration">Zeit</string>
    <string name="averageVelocity">Ø-Geschwindigkeit</string>
    <string name="maxVelocity">Max. Geschwindigkeit</string>
    <string name="gps_marker">Gps marker</string>
    <string name="settings">Einstellungen</string>
    <string name="toast_nomaps">Du musst erst eine Karte in den Einstellungen auswählen!</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="alert_delete_track">Möchtest Du diesen Track löschen?</string>
    <string name="alert_title_delete_track">Track löschen</string>
    <string name="service_notification_text">Erfasst Fitness-Daten</string>
    <string name="app_title">Super Fit</string>
    <string name="bike_sensor">Bike-Sensor</string>
    <string name="alert_stop_service">Möchtest Du die Aufzeichnung beenden?</string>
    <string name="alert_title_stop_service">Beenden</string>
    <string name="heartrate_sensor">Herzfrequenz-Sensor</string>
    <string name="heartrate_description">Unterstützung für Herzfrequenz einschalten</string>
    <string name="menu_eventlog">Ereignisanzeige</string>
    <string name="log_type_image">log type image</string>
    <string name="menu_log_clear">Leeren</string>
    <string name="alert_clear_eventlog">Möchtest Du die Ereignisanzeige leeren?</string>
    <string name="alert_title_clear_eventlog">Ereignisanzeige leeren</string>
    <string name="bike_support">Bike-Sensor</string>
    <string name="bike_support_description">Unterstützung für Bike Sensoren einschalten</string>
    <string name="bike_circumference">Radumfang</string>
    <string name="bike_circumference_description">Gib bitte den Rad-Umfang in mm ein</string>
    <string name="maps_description">Kartenauswahl</string>
    <string name="permission_location_always_rationale">Super Fit benötigt ständigen Zugriff auf den genauen Standort, um die Position auf der Karte anzuzeigen, und im Hintergrund die Strecke aufzuzeichnen</string>
    <string name="permission_location_rationale">Super Fit benötigt Zugriff auf den genauen Standort, um die Position auf der Karte anzuzeigen</string>
    <string name="permission_external_storage_rationale">Super Fit benötigt Leseberechtigungen auf den Speicher, um die Landkarte anzuzeigen</string>
    <string name="permission_notification_rationale">Super Fit muss Benachrichtigungen anzeigen können</string>
    <string name="permission_blutooth_scan">Super Fit benötigt die Berechtigung, Bluetooth-Sensoren zu erfassen</string>
    <string name="permission_blutooth_connect">Super Fit benötigt die Berechtigung, Bluetooth-Sensoren zu nutzen</string>
    <string name="permission">Zugriff erlauben</string>
    <string name="permission_denied">Du kannst die Berechtigungen in den App-Einstellungen (für die App "Super Fit") erteilen</string>
    <string name="partner_mode">Partnermodus</string>

</resources>
